# calculadoraLambda

./: Dockerfile  Makefile  README.md  calculator.py  pyproject.toml
.github/workflows/: cicd.yml
tests/: test_calcutator.py
